# univention-corporate-server

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.dev.md  README.md  REUSE.toml  SECURITY.md  sonar-project.properties  update-reuse-toml.py
.gitlab/: CODEOWNERS
.gitlab-ci/: aptly-create  aptly-publish  aptly-upload  base-deb.yml  base-doc.yml  base.yml  doc-builder  git.pref
.pre-commit/: conventional-commit-message  prepare-commit-msg
LICENSES/: LicenseRef-CyrusSASL-exception.txt  LicenseRef-FreeDigitalPhotos.txt  LicenseRef-IBM.txt  LicenseRef-RFC-Document.txt  LicenseRef-Univention-Proprietary.txt  LicenseRef-unknown-solaris-ldap-schema.txt
base/pam-runasroot/: Makefile  pam_runasroot.c
base/pam-univentionmailcyrus/: Makefile  pam_univentionmailcyrus.c
base/univention-bootsplash/: univention-welcome-screen
base/univention-config-registry/: Makefile.am  setup.py  ucr.pm
base/univention-config-registry/lib/: Makefile.am  config.c
base/univention-debmirror/: 77univention-debmirror.inst
base/univention-debug/: Makefile.am
base/univention-debug-python/: setup.py
base/univention-errata-level/: maintained-packages.txt
base/univention-group-membership-cache/: univention-ldap-cache
base/univention-heimdal/: 11univention-heimdal-init.inst  15univention-heimdal-kdc.inst  kerberos_now  keytab-member.py  keytab.py  salt_krb5Keys  univention-create-keytab
base/univention-home-mounter/: univention-mount-homedir  univention-umount-homedirs
base/univention-ipcalc/: setup.py
base/univention-l10n-fr/: 98univention-l10n-fr.inst  Makefile  all_targets.mk
base/univention-licence/: Makefile.am  configure.ac
base/univention-licence-python/: setup.py  test.py
base/univention-licence/lib/: Makefile.am  internal.h  license.c  license_key.c  license_ldap.c  license_signature.c
base/univention-maintenance/: univention-system-stats
base/univention-maintenance-mode/: univention-maintenance-mode-update-progress
base/univention-network-manager/: univention-register-network-address
base/univention-pam/: 11univention-pam.inst  faillog.py  ldap-group-to-file.py  lock-user  nscd.py  nss.py  univention-create-homedir  well-known-sid-name-mapping.py
base/univention-policy/: Makefile.am  configure.in
base/univention-policy/debian/: changelog  copyright  rules
base/univention-policy/include/: Makefile.am
base/univention-policy/include/univention/: Makefile.am  krb5.h  ldap.h  policy.h
base/univention-policy/lib/: Makefile.am  internal.h  krb5.c  ldap.c  policy.c
base/univention-policy/python-lib/: policy_result.py
base/univention-policy/tools/: Makefile.am  univention_policy_result.c
base/univention-python/: setup.py
base/univention-python-heimdal/: asn1.c  asn1.h  ccache.c  ccache.h  context.c  context.h  creds.c  creds.h  enctype.c  enctype.h  error.c  error.h  error_gen.c  keyblock.c  keyblock.h  keytab.c  keytab.h  module.c  principal.c  principal.h  realm.c  realm.h  salt.c  salt.h  setup.py  test.py  ticket.c  ticket.h
doc/: Makefile  README.md  bibliography-de.bib  bibliography.bib
doc/changelog/: conf.py  (+3 more)
test/: README.md
(+3117 files in other folders)
