#
# Univention Policy
#  configure template for the debian package
#
# Like what you see? Join us!
# https://www.univention.com/about-us/careers/vacancies/
#
# SPDX-FileCopyrightText: 2004-2025 Univention GmbH
# SPDX-License-Identifier: AGPL-3.0-only

AC_INIT(lib/policy.c)

AM_INIT_AUTOMAKE(univentionpolicy,0.1)
AM_PROG_LIBTOOL

LIB_CURRENT=0
LIB_REVISION=1
LIB_AGE=0
AC_SUBST(LIB_CURRENT)
AC_SUBST(LIB_REVISION)
AC_SUBST(LIB_AGE)

AC_PROG_INSTALL
AC_LANG_C
AC_HEADER_STDC

AC_CHECK_LIB(ldap, ldap_bind, [
  AC_CHECK_HEADERS([ldap.h], [
    LDAP_LIB=-lldap
    AC_DEFINE([HAVE_LIBLDAP], [1], [libldap])
    AC_DEFINE([HAVE_LDAP_H], [1])
  ])
])
AC_SUBST(LDAP_LIB)

AC_CHECK_LIB(lber, ber_free, [
  AC_CHECK_HEADERS([lber.h], [
    LBER_LIB=-llber
    AC_DEFINE([HAVE_LIBLBER], [1], [liblber])
    AC_DEFINE([HAVE_LBER_H], [1])
  ])
])
AC_SUBST(LBER_LIB)

AC_OUTPUT(Makefile include/univention/Makefile include/Makefile lib/Makefile tools/Makefile)
