#
# Univention Policy
#  Makefile template for the debian package
#
# Like what you see? Join us!
# https://www.univention.com/about-us/careers/vacancies/
#
# SPDX-FileCopyrightText: 2003-2025 Univention GmbH
# SPDX-License-Identifier: AGPL-3.0-only

AUTOMAKE_OPTIONS = foreign

includedir = $(prefix)/include/univention

include_HEADERS = policy.h ldap.h krb5.h
